devops/k8s/order-api.yml
kind: Service
apiVersion: v1
metadata:
  name: order-api
  labels:
    app: orderapi
spec:
  selector:
    app: orderapi
  ports:
  - protocol: TCP
    port: 80

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-api
  labels:
    app: orderapi
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  selector:
    matchLabels:
      app: orderapi
  template:
    metadata:
      labels:
        app: orderapi
    spec:
      containers:
      - name: orderapi
        image: nhatthai/azure-opentelemetry-order-api:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: 250m
          limits:
            cpu: 500m
